--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
         "express-session": "^1.17.2",
         "mongodb": "^4.4.1",
         "node-fetch": "^3.2.3",
+        "node-int64": "^0.4.0",
         "request": "^2.88.2",
-        "serve-favicon": "^2.5.0"
+        "serve-favicon": "^2.5.0",
+        "varint": "^6.0.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
