--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ MODE=production
 DEV_SERVER_PORT=8080
 SERVER_PORT=8000
 
+MC_SERVER_ADDRESS=localhost
+MC_SERVER_PORT=25565
+
 DATABASE_CONNECTION=mongodb://con
 DATABASE_NAME=crweb
 
